add CNAME for zadig.akeo.ie

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<p><b>Note:</b> <i>"libusb-based"</i> above means an application that uses either <a href="https://libusb.info">libusb</a>, <a href="https://sourceforge.net/p/libusb-win32/wiki/Home/">libusb-win32</a> or <a href="http://libusbk.sourceforge.net/UsbK3/">libusbK</a>.</p>
 			<h2 style="border: 4px solid #a09a8a;"><span style="font-size: 133%">Download</span></h2>
 				<p><b>Updated 2018.07.26:</b></p>
-				<p><ul><li><span style="font-size: 133%"><b><a href="/downloads/zadig-2.4.exe">Zadig 2.4</a></b></span> (4.9 MB)</li>
+				<p><ul><li><span style="font-size: 133%"><b><a href="https://github.com/pbatard/libwdi/releases/download/b721/zadig-2.4.exe">Zadig 2.4</a></b></span> (4.9 MB)</li>
 				<li><a href="/downloads/">Other versions</a></li>
 				</ul></p>
 			<h4>System Requirements:</h4>
