update for Zadig 2.5

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -43,6 +43,7 @@
 		</script>
 		<h1>Zadig Downloads</h1>
 <pre><img src="/icons/blank.png" alt="Icon " width="32" height="32"> Name                       Last modified      Size  Description<hr><a href="/"><img src="/icons/back.png" alt="[PARENTDIR]" width="32" height="32"></a> <a href="/">Parent Directory</a>                                -   
+<a href="https://github.com/pbatard/libwdi/releases/download/b730/zadig-2.5.exe"><img src="/icons/zadig.png" width="32" height="32"></a> <a href="https://github.com/pbatard/libwdi/releases/download/b730/zadig-2.5.exe">zadig-2.5.exe</a>              2020-03-30 19:25   4.9M  
 <a href="https://github.com/pbatard/libwdi/releases/download/b721/zadig-2.4.exe"><img src="/icons/zadig.png" width="32" height="32"></a> <a href="https://github.com/pbatard/libwdi/releases/download/b721/zadig-2.4.exe">zadig-2.4.exe</a>              2018-07-27 01:07   4.9M  
 <a href="https://github.com/pbatard/libwdi/releases/download/v1.3.0/zadig-2.3.exe"><img src="/icons/zadig.png" width="32" height="32"></a> <a href="https://github.com/pbatard/libwdi/releases/download/v1.3.0/zadig-2.3.exe">zadig-2.3.exe</a>              2017-04-18 20:10   4.9M  
 <a href="https://github.com/pbatard/libwdi/releases/download/v1.2.5/zadig-2.2.exe"><img src="/icons/zadig.png" width="32" height="32"></a> <a href="https://github.com/pbatard/libwdi/releases/download/v1.2.5/zadig-2.2.exe">zadig-2.2.exe</a>              2016-02-04 10:47   5.0M  
