--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 			</p>
 			<p><b>Note:</b> <i>"libusb-based"</i> above means an application that uses either <a href="https://libusb.info">libusb</a>, <a href="https://sourceforge.net/p/libusb-win32/wiki/Home/">libusb-win32</a> or <a href="http://libusbk.sourceforge.net/UsbK3/">libusbK</a>.</p>
 			<h2 style="border: 4px solid #a09a8a;"><span style="font-size: 133%">Download</span></h2>
-				<p><b>Updated 2018.07.26:</b></p>
-				<p><ul><li><span style="font-size: 133%"><b><a href="https://github.com/pbatard/libwdi/releases/download/b721/zadig-2.4.exe">Zadig 2.4</a></b></span> (4.9 MB)</li>
+				<p><b>Updated 2020.03.28:</b></p>
+				<p><ul><li><span style="font-size: 133%"><b><a href="https://github.com/pbatard/libwdi/releases/download/b730/zadig-2.5.exe">Zadig 2.5</a></b></span> (4.9 MB)</li>
 				<li><a href="/downloads/">Other versions</a></li>
 				</ul></p>
 			<h4>System Requirements:</h4>
@@ -122,10 +122,10 @@
 			<a name="versions"></a>
 			<h2>Changelog</h2>
 			<ul>
-				<li><b>Version 2.4</b> (2018.07.26)<ul>
-					<li>Fix HTTPS download and update URLs</li>
+				<li><b>Version 2.5</b> (2020.03.28)<ul>
+					<li>Fix <code>.cat</code> generation for some user directories with non western characters</li>
+					<li>Fix update check</li>
 					<li>Improve error reporting</li>
-					<li>Fix Windows 7 showing a "Trusted Publisher" dialog</li>
 					<li>Embedded drivers: WinUSB v6.1.7600.16385, libusb-win32 v1.2.6.0, libusbK v3.0.7.0 & usbser (native)</li>
 				</ul></li>
 				<li><b><a href="https://github.com/pbatard/libwdi/blob/master/examples/zadig_README.creole">Other Versions</a></b></li>
@@ -138,7 +138,7 @@
 				If you are a developer, you are very much encouraged to tinker with Zadig/libwdi and submit patches.</p>
 		</div>
  		<div class="footer">
-		Copyright © 2013-2018 <a href="https://pete.akeo.ie">Pete Batard</a><br/>
+		Copyright © 2013-2020 <a href="https://pete.akeo.ie">Pete Batard</a><br/>
 		Hosting by <a href="https://github.com">GitHub</a>
 		</div>
 	</div>
