make sure we serve non-personalized ads

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 	     data-ad-client="ca-pub-8924382055379825"
 	     data-ad-slot="5382671908"></ins>
 	<script>
+	(adsbygoogle = window.adsbygoogle || []).requestNonPersonalizedAds=1;
 	(adsbygoogle = window.adsbygoogle || []).push({});
 	</script>
 	</div>
