update for Zadig 2.6 release

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 			</p>
 			<p><b>Note:</b> <i>"libusb-based"</i> above means an application that uses either <a href="https://libusb.info">libusb</a>, <a href="https://sourceforge.net/p/libusb-win32/wiki/Home/">libusb-win32</a> or <a href="http://libusbk.sourceforge.net/UsbK3/">libusbK</a>.</p>
 			<h2 style="border: 4px solid #a09a8a;"><span style="font-size: 133%">Download</span></h2>
-				<p><b>Updated 2020.03.28:</b></p>
-				<p><ul><li><span style="font-size: 133%"><b><a href="https://github.com/pbatard/libwdi/releases/download/b730/zadig-2.5.exe">Zadig 2.5</a></b></span> (4.9 MB)</li>
+				<p><b>Updated 2021.09.04:</b></p>
+				<p><ul><li><span style="font-size: 133%"><b><a href="https://github.com/pbatard/libwdi/releases/download/v1.4.0/zadig-2.6.exe">Zadig 2.6</a></b></span> (4.9 MB)</li>
 				<li><a href="/downloads/">Other versions</a></li>
 				</ul></p>
 			<h4>System Requirements:</h4>
@@ -183,19 +183,18 @@
 			<a name="versions"></a>
 			<h2>Changelog</h2>
 			<ul>
-				<li><b>Version 2.5</b> (2020.03.28)<ul>
-					<li>Fix <code>.cat</code> generation for some user directories with non western characters</li>
-					<li>Fix update check</li>
+				<li><b>Version 2.6</b> (2021.09.04)<ul>
+					<li>Work around Windows corrupting the key containers</li>
 					<li>Improve error reporting</li>
-					<li>Embedded drivers: WinUSB v6.1.7600.16385, libusb-win32 v1.2.6.0, libusbK v3.0.7.0 & usbser (native)</li>
+					<li>Embedded drivers: WinUSB v6.1.7600.16385, libusb-win32 v1.2.6.0, libusbK v3.1.0.0 & usbser (native)</li>
 				</ul></li>
 				<li><b><a href="https://github.com/pbatard/libwdi/blob/master/examples/zadig_README.creole">Other Versions</a></b></li>
 			</ul>
 			<h2>Source Code</h2>
-				<p><ul><li><a href="https://github.com/pbatard/libwdi/archive/v1.3.1.zip">libwdi 1.3.1 source</a> (320 KB). Includes Zadig in the examples directory.</li>
+				<p><ul><li><a href="https://github.com/pbatard/libwdi/archive/v1.4.0.zip">libwdi 1.4.0 source</a> (320 KB). Includes Zadig in the examples directory.</li>
 				<li>Alternatively, you can clone the <a href="https://git-scm.com">git</a> repository using:
 				<pre>$ git clone git://github.com/pbatard/libwdi</pre></li>
-				<li>For more information, see the <a href="https://github.com/pbatard/libwdi">github project</a>.</li></ul>
+				<li>For more information, see the <a href="https://github.com/pbatard/libwdi">GitHub project</a>.</li></ul>
 				If you are a developer, you are very much encouraged to tinker with Zadig/libwdi and submit patches.</p>
 		</div>
  		<div class="footer">
