--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
 			document.getElementById('cookie-statement').style.display = 'block';
 	});
 	</script>
-	<script type="text/javascript">
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		ga('create', 'UA-37022602-1', 'auto');
-		ga('send', 'pageview');
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6PCK0CM7G9"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-6PCK0CM7G9');
 	</script>
 	<style type="text/css">
 		body {
@@ -128,19 +127,19 @@
 
 <body>
 	<div id="cookie-statement" style="display: none;" class="cookie-notification">
-	  <div class="text">
-	    <span>This page uses Google services, which may serve <u>non-personalised</u> cookies for advertising, analytics and security.</span>
-	    <a href="https://policies.google.com/technologies/cookies" target="_blank">See details</a>
-	    <a href="#" onclick="document.getElementById('cookie-statement').style.display = 'none'; setCookie('display_cookie_notice', 'no', 365);">OK</a>
-	  </div>
+		<div class="text">
+			<span>This page uses Google services, which may serve <u>non-personalised</u> cookies for advertising, analytics and security.</span>
+			<a href="https://policies.google.com/technologies/cookies" target="_blank">See details</a>
+			<a href="#" onclick="document.getElementById('cookie-statement').style.display = 'none'; setCookie('display_cookie_notice', 'no', 365);">OK</a>
+		</div>
 	</div>
 	<div id="right_column">
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Zadig -->
 	<ins class="adsbygoogle"
-	     style="display:inline-block;width:160px;height:600px"
-	     data-ad-client="ca-pub-8924382055379825"
-	     data-ad-slot="5382671908"></ins>
+		style="display:inline-block;width:160px;height:600px"
+		data-ad-client="ca-pub-8924382055379825"
+		data-ad-slot="5382671908"></ins>
 	<script>
 	(adsbygoogle = window.adsbygoogle || []).requestNonPersonalizedAds=1;
 	(adsbygoogle = window.adsbygoogle || []).push({});
@@ -161,8 +160,8 @@
 			</p>
 			<p><b>Note:</b> <i>"libusb-based"</i> above means an application that uses either <a href="https://libusb.info">libusb</a>, <a href="https://sourceforge.net/p/libusb-win32/wiki/Home/">libusb-win32</a> or <a href="http://libusbk.sourceforge.net/UsbK3/">libusbK</a>.</p>
 			<h2 style="border: 4px solid #a09a8a;"><span style="font-size: 133%">Download</span></h2>
-				<p><b>Updated 2021.11.01:</b></p>
-				<p><ul><li><span style="font-size: 133%"><b><a href="https://github.com/pbatard/libwdi/releases/download/v1.4.1/zadig-2.7.exe">Zadig 2.7</a></b></span> (4.9 MB)</li>
+				<p><b>Updated 2023.03.01:</b></p>
+				<p><ul><li><span style="font-size: 133%"><b><a href="https://github.com/pbatard/libwdi/releases/download/v1.5.0/zadig-2.8.exe">Zadig 2.8</a></b></span> (5.0 MB)</li>
 				<li><a href="/downloads/">Other versions</a></li>
 				</ul></p>
 			<h4>System Requirements:</h4>
@@ -183,25 +182,23 @@
 			<a name="versions"></a>
 			<h2>Changelog</h2>
 			<ul>
-				<li><b>Version 2.7</b> (2021.11.01)<ul>
-					<li>Improve Windows version reporting</li>
-					<li>Prevent an infinite loop when a certificate cannot be deleted</li>
-					<li>Fix an error when trying to install <code>libusb0.sys</code> as a filter driver</li>
-					<li>Don't continue on <code>.cat</code> signing errors unless test signing is enabled</li>
-					<li>Add a more explicit error for incompatible Windows 11 Insider builds</li>
-					<li>Embedded drivers: WinUSB v6.1.7600.16385, libusb-win32 v1.2.6.0, libusbK v3.1.0.0 & usbser (native)</li>
+				<li><b>Version 2.8</b> (2023.03.01)<ul>
+					<li>Add ARM64 driver installation support (<i>WinUSB</i> and <i>USBSer</i> only!)<br/>
+					<b>Note:</b> Requires Windows 10 1511 or later with x86 (32-bit) emulation support.</li>
+					<li>Improve networking support</li>
+					<li>Embedded drivers: WinUSB v6.1.7600.16385, libusb-win32 v1.2.7.3, libusbK v3.1.0.0 & USBSer (native)</li>
 				</ul></li>
 				<li><b><a href="https://github.com/pbatard/libwdi/blob/master/examples/zadig_README.creole">Other Versions</a></b></li>
 			</ul>
 			<h2>Source Code</h2>
-				<p><ul><li><a href="https://github.com/pbatard/libwdi/archive/v1.4.0.zip">libwdi 1.4.0 source</a> (320 KB). Includes Zadig in the examples directory.</li>
+				<p><ul><li><a href="https://github.com/pbatard/libwdi/archive/v1.5.0.zip">libwdi 1.5.0 source</a> (328 KB). Includes Zadig in the examples directory.</li>
 				<li>Alternatively, you can clone the <a href="https://git-scm.com">git</a> repository using:
 				<pre>$ git clone git://github.com/pbatard/libwdi</pre></li>
 				<li>For more information, see the <a href="https://github.com/pbatard/libwdi">GitHub project</a>.</li></ul>
 				If you are a developer, you are very much encouraged to tinker with Zadig/libwdi and submit patches.</p>
 		</div>
  		<div class="footer">
-		Copyright © 2013-2021 <a href="https://pete.akeo.ie">Pete Batard</a><br/>
+		Copyright © 2013-2023 <a href="https://pete.akeo.ie">Pete Batard</a><br/>
 		Hosting by <a href="https://github.com">GitHub</a>
 		</div>
 	</div>
