Update obsolete WinUSB link
* Closes #350.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		<h1><img border="0" src="pics/zadig-128.png" alt="[Zadig icon]" style="width:128px;height:128px;vertical-align:middle; margin-bottom: 10px;"/>&nbsp;Zadig</h1>
 		<div class="tagline">USB driver installation made easy</div>
 			<img border="0" src="pics/zadig.png" alt="[Zadig screenshot]"/>
-		<p><b><i>Zadig</i></b> is a Windows application that installs generic USB drivers, such as <a href="https://docs.microsoft.com/en-us/windows-hardware/drivers/usbcon/winusb">WinUSB</a>, <a href="https://sourceforge.net/p/libusb-win32/wiki/Home/">libusb-win32/libusb0.sys</a> or <a href="http://libusbk.sourceforge.net/UsbK3/">libusbK</a>, to help you access USB devices.</p>
+		<p><b><i>Zadig</i></b> is a Windows application that installs generic USB drivers, such as <a href="https://learn.microsoft.com/en-us/windows-hardware/drivers/usbcon/introduction-to-winusb-for-developers">WinUSB</a>, <a href="https://sourceforge.net/p/libusb-win32/wiki/Home/">libusb-win32/libusb0.sys</a> or <a href="https://libusbk.sourceforge.net/UsbK3/">libusbK</a>, to help you access USB devices.</p>
 			<p>It can be especially useful for cases where:
 				<ul>
 					<li>you want to access a device using a libusb-based application</li>
@@ -158,7 +158,7 @@
 					<li>you want to access a device using WinUSB</li>
 				</ul>
 			</p>
-			<p><b>Note:</b> <i>"libusb-based"</i> above means an application that uses either <a href="https://libusb.info">libusb</a>, <a href="https://sourceforge.net/p/libusb-win32/wiki/Home/">libusb-win32</a> or <a href="http://libusbk.sourceforge.net/UsbK3/">libusbK</a>.</p>
+			<p><b>Note:</b> <i>"libusb-based"</i> above means an application that uses either <a href="https://libusb.info">libusb</a>, <a href="https://sourceforge.net/p/libusb-win32/wiki/Home/">libusb-win32</a> or <a href="https://libusbk.sourceforge.net/UsbK3/">libusbK</a>.</p>
 			<h2 style="border: 4px solid #a09a8a;"><span style="font-size: 133%">Download</span></h2>
 				<p><b>Updated 2024.06.13:</b></p>
 				<p><ul><li><span style="font-size: 133%"><b><a href="https://github.com/pbatard/libwdi/releases/download/v1.5.1/zadig-2.9.exe">Zadig 2.9</a></b></span> (5.1 MB)</li>
